t/batch/directives/invalid/expected/005-changed-sentinel.pattern
ValueError: line 5: sentinel changed from '# flux:' to '#flux:'
